Update to camera_lib
pasted camera_lib to /client
updated server side to render video footage from client to webpage (not tested yet)

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,7 +12,7 @@
             </h3>
         </div>
         <div class="video_frame">
-           <img src="{{url_for('VideoCaptureImage')}}" alt="video">
+           <img src="{{url_for('Live')}}" alt="video">
         </div>
     </div>
 </body>
