--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,9 +11,30 @@
                 Live Streaming
             </h3>
         </div>
-        <div class="video_frame">
-           <img src="{{url_for('Live')}}" alt="video">
+        <div class="video_frame" id = camera_list>
         </div>
     </div>
 </body>
 </html>
+
+<script>
+function createElementFromHTML(htmlString) {
+    var div = document.createElement('div');
+    div.innerHTML = htmlString.trim();
+    // for (child in div.childNodes){
+        // document.getElementById("camera_list").appendChild(child)
+    // }
+    // document.getElementById("camera_list").appendChild(div.firstChild)
+    document.getElementById("camera_list").appendChild(div.childNodes[0])
+    document.getElementById("camera_list").appendChild(div.childNodes[1])
+    document.getElementById("camera_list").appendChild(div.childNodes[2])
+
+    // Change this to div.childNodes to support multiple top-level nodes.
+    // return div.firstChild;
+    console.log("success")
+  }
+
+const test = '{{ temp | safe}}';
+createElementFromHTML(test)
+
+</script>
