--- a/server/templates/style.css
+++ b/server/templates/style.css
@@ -1,11 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-.hero{
+.hero {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3));
@@ -16,7 +16,7 @@
     justify-content: center;
 }
 
-nav{
+nav {
     width: 100%;
     position: absolute;
     top: 0;
@@ -26,13 +26,13 @@ nav{
     align-items: center;
 }
 
-.content{
+.content {
     text-align: center;
     position: relative;
     z-index: 1; /* Ensure it is above the video */
 }
 
-.content h1{
+.content h1 {
     font-size: 60px;
     color:#fff;
     font-weight: 600;
@@ -51,7 +51,7 @@ nav{
     border-radius: 5px;
 }
 
-.content a{
+.content a {
     text-decoration: none;
     display: inline-block;
     color: #fff;
@@ -70,3 +70,31 @@ nav{
     z-index: -1;
 }
 
+/* Button Styles */
+#cam_buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.cam_button {
+    background-color: #2e2e2e; /* Default dark background */
+    color: #d1d1d1; /* Default light text color */
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 20px; /* Rounded corners */
+    margin: 0 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.cam_button.active {
+    background-color: #27a29d; /* Active background color */
+    color: #fff; /* Active text color */
+}
+
+.cam_button:hover {
+    background-color: #3a3a3a; /* Hover background color */
+}
